--- a/public/index.html
+++ b/public/index.html
@@ -1,91 +1,142 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="/css/main.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <section id="sideMenu">
-      <nav>
-        <a href="#" class="active">
-          <i class="fa fa-home" aria-hidden="true"></i> Item
-        </a>
-        <a href="#">
-          <i class="fa fa-sticky-note" aria-hidden="true"></i> Item
-        </a>
-        <a href="#">
-          <i class="fa fa-bookmark" aria-hidden="true"></i> Item
-        </a>
-        <a href="#">
-          <i class="fa fa-calendar-check" aria-hidden="true"></i> Item
-        </a>
-        <a href="#">
-          <i class="fa fa-user-circle" aria-hidden="true"></i> Item
-        </a>
-        <a href="#">
-          <i class="fa fa-cog" aria-hidden="true"></i> Item
-        </a>
-      </nav>
+        <nav>
+            <a href="#" class="active">
+                <i class="fa fa-home" aria-hidden="true"></i> Item
+            </a>
+            <a href="#">
+                <i class="fa fa-sticky-note" aria-hidden="true"></i> Item
+            </a>
+            <a href="#">
+                <i class="fa fa-bookmark" aria-hidden="true"></i> Item
+            </a>
+            <a href="#">
+                <i class="fa fa-calendar-check" aria-hidden="true"></i> Item
+            </a>
+            <a href="#">
+                <i class="fa fa-user-circle" aria-hidden="true"></i> Item
+            </a>
+            <a href="#">
+                <i class="fa fa-cog" aria-hidden="true"></i> Item
+            </a>
+        </nav>
     </section>
 
     <header>
-      <div class="search-area">
-        <i class="fa fa-search" aria-hidden="true"></i>
-        <input type="text" placeholder="">
-      </div>
-      <div class="user-area">
-        <a href="#" class="notification">
-          <i class="fa fa-bell"></i>
-          <span class="circle">3</span>
-        </a>
-        <a href="#">
-          <div class="user-img"></div>
-          <i class="fa fa-caret-down"></i>
-        </a>
-      </div>
+        <div class="search-area">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="text" placeholder="">
+        </div>
+        <div class="user-area">
+            <a href="#" class="notification">
+                <i class="fa fa-bell"></i>
+                <span class="circle">3</span>
+            </a>
+            <a href="#">
+                <div class="user-img"></div>
+                <i class="fa fa-caret-down"></i>
+            </a>
+        </div>
     </header>
 
     <section id="content-area">
 
-      <div class="heading">
-        <h1>Dashboard</h1>
-        <p>Welcome to MyCompany</p>
-      </div>
-
-      <div class="cards">
-
-        <div class="card">
-          <div class="user-img"></div>
-          <span class="user-name">
-            Arthuria Pendragon
-          </span>
-          <span class="user-title">
-            Full Stack Developer
-          </span>
-          <div class="col-md-4">
-            <span class="education">
-              Computer Science
-            </span>
-          </div>
-          <div class="col-md-4">
-            <span class="schools">
-              Harvard University
-            </span>
-          </div>
+        <div class="heading">
+            <h1>Dashboard</h1>
+            <p>Welcome to MyCompany</p>
         </div>
 
-        <div class="card">
-          <h6>Interview Schedule</h6>
-          <span>
-            05 January 2018
-          </span>
-        </div>
+        <div class="cards">
 
-      </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="user-img"></div>
+                    <span class="user-name">
+                        Arthuria Pendragon
+                    </span>
+                    <span class="user-title">
+                        Full Stack Developer
+                    </span>
+                    <hr>
+
+                    <div class="col-md-3">
+                        <span class="education">
+                            Education
+                        </span>
+                    </div>
+                    <div class="col-md-9">
+                        <span class="schools">
+                            Computer Science
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <h6>Interview Schedule</h6>
+                    <span class="date">
+                        05 January 2018
+                    </span>
+                    <div class="col-md-2">
+                        <span class="job-type">IT</span>
+                    </div>
+                    <div class="col-md-10">
+                        <span class="schools">Web Developer</span>
+                        <span class="schools">Software Developer</span>
+                        <span class="time">08:00 AM</span>
+                    </div>
+                </div>
+            </div>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Company</th>
+                        <th>Jobs</th>
+                        <th>End of Application</th>
+                        <th>Location</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Online Shopping</td>
+                        <td>Java Developer</td>
+                        <td>December 30, 2017</td>
+                        <td>Philippines</td>
+                    </tr>
+                    <tr>
+                        <td>Online Shopping</td>
+                        <td>Java Developer</td>
+                        <td>December 30, 2017</td>
+                        <td>Philippines</td>
+                    </tr>
+                    <tr>
+                        <td>Online Shopping</td>
+                        <td>Java Developer</td>
+                        <td>December 30, 2017</td>
+                        <td>Philippines</td>
+                    </tr>
+                    <tr>
+                        <td>Online Shopping</td>
+                        <td>Java Developer</td>
+                        <td>December 30, 2017</td>
+                        <td>Philippines</td>
+                    </tr>
+                </tbody>
+            </table>
     </section>
-  </body>
+</body>
+
 </html>
